--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ html,
 body {
 	padding: 0;
 	margin: 0;
-	background: transparent;
+	background: rgba(222, 222, 222, .3);
 }
 
 /* Use OS default fonts */
@@ -23,21 +23,12 @@ body {
 	font-feature-settings: 'liga', 'clig', 'kern';
 }
 
-header {
-	position: absolute;
-	width: 500px;
-	height: 250px;
-	top: 50%;
-	left: 50%;
-	margin-top: -125px;
-	margin-left: -250px;
-	text-align: center;
+#root {
+	padding: 8px;
 }
 
-header h1 {
-	font-size: 60px;
-	font-weight: 200;
-	margin: 0;
-	padding: 0;
-	opacity: 0.7;
+.list-item {
+	font-size: 18px;
+	padding: 12px;
+	margin-bottom: 6px;
 }
